--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <section class="game">
-            <div class="content">
-                <h1>Conteúdo</h1>
-            </div>
-            <footer class="footer">FOOTER</footer>
+            <header>
+                <h1>Connect the fibre - Game</h1>
+            </header>
+            <div class="content"></div>
         </section>
     </body>
 </html>
