Add border in the elements of game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <section class="game">
             <header>
-                <h1>Connect the fibre - Game</h1>
+                <h1 class="name">Connect the fibre - Game</h1>
             </header>
             <div class="content"></div>
         </section>
