--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Connect the fibre - Game</title>
     <script src="js/d3.min.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8" defer></script>
-    <link rel="stylesheet" href="./css/style.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="./css/game.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/game.css" media="screen" charset="utf-8">
     </head>
     <body>
         <section class="game">
