--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <title>Connect the fibre - Game</title>
+    <title>Connect Optical Fiber - The Game</title>
     <script src="js/d3.min.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8" defer></script>
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
@@ -11,7 +11,7 @@
     <body>
         <section class="game">
             <header>
-                <h1 class="name">Connect the fibre - Game</h1>
+                <h1 class="name">Connect Optical Fiber - The Game</h1>
             </header>
             <div class="content"></div>
         </section>
