Modularize the text insertion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Connect Optical Fiber - The Game</title>
     <script src="js/d3.min.js" charset="utf-8"></script>
-    <script src="js/application.js" charset="utf-8" defer></script>
+    <script src="js/app.js" charset="utf-8" defer></script>
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/game.css" media="screen" charset="utf-8">
     </head>
