--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Connect Optical Fiber - The Game</title>
     <script src="js/d3.min.js" charset="utf-8"></script>
-    <script src="js/application.js" charset="utf-8" defer></script>
+    <script src="js/app.js" charset="utf-8" defer></script>
+    <link rel="stylesheet" href="css/reset.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/game.css" media="screen" charset="utf-8">
     </head>
