--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-72724250-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <title>Connect Optical Fiber - The Game</title>
     <script src="js/d3.min.js" charset="utf-8"></script>
-    <script src="js/app.js" charset="utf-8" defer></script>
+    <script src="js/application.js" charset="utf-8" defer></script>
     <link rel="stylesheet" href="css/reset.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/game.css" media="screen" charset="utf-8">
